--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.gestionale.GestionaleController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <TabPane layoutX="-3.0" layoutY="31.0" prefHeight="469.0" prefWidth="743.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="DIPENDENTI">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="738.0">
+                     <children>
+                        <Button layoutX="14.0" layoutY="229.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="137.0" text="Button" />
+                        <TextField layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="173.0" text="NOME" />
+                        <TextField layoutX="14.0" layoutY="58.0" prefHeight="25.0" prefWidth="173.0" text="COGNOME" />
+                        <DatePicker layoutX="14.0" layoutY="91.0" />
+                        <RadioButton layoutX="14.0" layoutY="131.0" mnemonicParsing="false" text="M" />
+                        <RadioButton layoutX="56.0" layoutY="131.0" mnemonicParsing="false" text="F" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+            <Tab text="CLIENTI">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+          <Tab text="FORNITORI">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+            <Tab text="CONTO">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+      <Label layoutY="-2.0" prefHeight="33.0" prefWidth="109.0" text="NOME AZIENDA" />
+   </children>
+</Pane>
