--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -10,19 +10,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionale.GestionaleController">
    <children>
       <TabPane layoutX="-3.0" layoutY="31.0" prefHeight="469.0" prefWidth="743.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
           <Tab text="DIPENDENTI">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="738.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="702.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="229.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="137.0" text="Button" />
-                        <TextField layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="173.0" text="NOME" />
-                        <TextField layoutX="14.0" layoutY="58.0" prefHeight="25.0" prefWidth="173.0" text="COGNOME" />
-                        <DatePicker layoutX="14.0" layoutY="91.0" />
+                        <Button layoutX="14.0" layoutY="229.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="45.0" prefWidth="137.0" text="Button" />
+                        <TextField fx:id="txtNome" layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField fx:id="txtCognome" layoutX="14.0" layoutY="58.0" prefHeight="25.0" prefWidth="173.0" />
+                        <DatePicker fx:id="DatePicker" layoutX="14.0" layoutY="91.0" />
                         <RadioButton layoutX="14.0" layoutY="131.0" mnemonicParsing="false" text="M" />
                         <RadioButton layoutX="56.0" layoutY="131.0" mnemonicParsing="false" text="F" />
                      </children>
