--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -18,12 +19,15 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="702.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="229.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="45.0" prefWidth="137.0" text="Button" />
+                        <Button layoutX="14.0" layoutY="170.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
                         <TextField fx:id="txtNome" layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="173.0" />
                         <TextField fx:id="txtCognome" layoutX="14.0" layoutY="58.0" prefHeight="25.0" prefWidth="173.0" />
                         <DatePicker fx:id="DatePicker" layoutX="14.0" layoutY="91.0" />
-                        <RadioButton layoutX="14.0" layoutY="131.0" mnemonicParsing="false" text="M" />
-                        <RadioButton layoutX="56.0" layoutY="131.0" mnemonicParsing="false" text="F" />
+                        <RadioButton fx:id="rbMaschio" layoutX="14.0" layoutY="131.0" mnemonicParsing="false" text="M">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="Sesso" />
+                           </toggleGroup></RadioButton>
+                        <RadioButton fx:id="rbFemmina" layoutX="56.0" layoutY="131.0" mnemonicParsing="false" text="F" toggleGroup="$Sesso" />
                      </children>
                   </AnchorPane>
             </content>
