--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionale.GestionaleController">
    <children>
@@ -19,15 +20,26 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="702.0">
                      <children>
-                        <Button layoutX="14.0" layoutY="170.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
-                        <TextField fx:id="txtNome" layoutX="14.0" layoutY="24.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField fx:id="txtCognome" layoutX="14.0" layoutY="58.0" prefHeight="25.0" prefWidth="173.0" />
-                        <DatePicker fx:id="DatePicker" layoutX="14.0" layoutY="91.0" />
-                        <RadioButton fx:id="rbMaschio" layoutX="14.0" layoutY="131.0" mnemonicParsing="false" text="M">
+                        <Button layoutX="27.0" layoutY="216.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
+                        <TextField fx:id="txtNome" layoutX="26.0" layoutY="82.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField fx:id="txtCognome" layoutX="26.0" layoutY="118.0" prefHeight="25.0" prefWidth="173.0" />
+                        <DatePicker fx:id="DatePicker" layoutX="25.0" layoutY="154.0" />
+                        <RadioButton fx:id="rbMaschio" layoutX="28.0" layoutY="190.0" mnemonicParsing="false" text="M">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sesso" />
                            </toggleGroup></RadioButton>
-                        <RadioButton fx:id="rbFemmina" layoutX="56.0" layoutY="131.0" mnemonicParsing="false" text="F" toggleGroup="$Sesso" />
+                        <RadioButton fx:id="rbFemmina" layoutX="71.0" layoutY="190.0" mnemonicParsing="false" text="F" toggleGroup="$Sesso" />
+                        <Label layoutX="577.0" layoutY="28.0" text="Label" />
+                        <Label layoutX="23.0" layoutY="39.0" prefHeight="25.0" prefWidth="187.0" text="AGGIUNGI DIPENDENTE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="37.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i  relativi dati">
+                           <font>
+                              <Font name="System Italic" size="8.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
             </content>
