--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.SearchableComboBox?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="496.0" prefWidth="740.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.gestionale.GestionaleController">
    <children>
@@ -18,17 +19,17 @@
         <tabs>
           <Tab text="DIPENDENTI">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="683.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="605.0">
                      <children>
-                        <Button layoutX="27.0" layoutY="216.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
+                        <Button layoutX="27.0" layoutY="213.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
                         <TextField fx:id="txtNome" layoutX="26.0" layoutY="82.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField fx:id="txtCognome" layoutX="26.0" layoutY="118.0" prefHeight="25.0" prefWidth="173.0" />
-                        <DatePicker fx:id="DatePicker" layoutX="25.0" layoutY="154.0" />
-                        <RadioButton fx:id="rbMaschio" layoutX="27.0" layoutY="190.0" mnemonicParsing="false" text="M">
+                        <TextField fx:id="txtCognome" layoutX="26.0" layoutY="117.0" prefHeight="25.0" prefWidth="173.0" />
+                        <DatePicker fx:id="DatePicker" layoutX="27.0" layoutY="152.0" />
+                        <RadioButton fx:id="rbMaschio" layoutX="27.0" layoutY="187.0" mnemonicParsing="false" text="M">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sesso" />
                            </toggleGroup></RadioButton>
-                        <RadioButton fx:id="rbFemmina" layoutX="71.0" layoutY="190.0" mnemonicParsing="false" text="F" toggleGroup="$Sesso" />
+                        <RadioButton fx:id="rbFemmina" layoutX="71.0" layoutY="187.0" mnemonicParsing="false" text="F" toggleGroup="$Sesso" />
                         <Label layoutX="23.0" layoutY="39.0" prefHeight="25.0" prefWidth="187.0" text="AGGIUNGI DIPENDENTE">
                            <font>
                               <Font name="System Bold" size="16.0" />
@@ -39,30 +40,31 @@
                               <Font name="System Italic" size="8.0" />
                            </font>
                         </Label>
-                        <Label layoutX="518.0" layoutY="39.0" prefHeight="25.0" prefWidth="193.0" text="SELEZIONA DIPENDENTE">
+                        <Label layoutX="372.0" layoutY="39.0" prefHeight="25.0" prefWidth="193.0" text="SELEZIONA DIPENDENTE">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <Label layoutX="539.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i  relativi dati">
+                        <Label layoutX="393.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i  relativi dati">
                            <font>
                               <Font name="System Italic" size="8.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="528.0" layoutY="82.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="528.0" layoutY="118.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="528.0" layoutY="154.0" prefHeight="25.0" prefWidth="173.0" />
-                        <RadioButton layoutX="528.0" layoutY="190.0" mnemonicParsing="false" text="M">
+                        <TextField layoutX="382.0" layoutY="114.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField layoutX="382.0" layoutY="149.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField layoutX="382.0" layoutY="183.0" prefHeight="25.0" prefWidth="173.0" />
+                        <RadioButton layoutX="382.0" layoutY="218.0" mnemonicParsing="false" text="M">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sesso1" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton layoutX="571.0" layoutY="190.0" mnemonicParsing="false" text="F">
+                        <RadioButton layoutX="426.0" layoutY="218.0" mnemonicParsing="false" text="F">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sesso2" />
                            </toggleGroup>
                         </RadioButton>
-                        <Button layoutX="518.0" layoutY="216.0" mnemonicParsing="false" onAction="#onButtonMostraDati" prefHeight="42.0" prefWidth="179.0" text="Mostra dati dipendente" />
+                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonMostraDati" prefHeight="42.0" prefWidth="179.0" text="Mostra dati dipendente" />
+                        <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" />
                      </children>
                   </AnchorPane>
             </content>
