--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -50,9 +51,9 @@
                               <Font name="System Italic" size="8.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="382.0" layoutY="114.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="382.0" layoutY="149.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="382.0" layoutY="183.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField editable="false" layoutX="382.0" layoutY="114.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField editable="false" layoutX="382.0" layoutY="149.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField editable="false" layoutX="382.0" layoutY="183.0" prefHeight="25.0" prefWidth="173.0" />
                         <RadioButton layoutX="382.0" layoutY="218.0" mnemonicParsing="false" text="M">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sesso1" />
@@ -63,7 +64,7 @@
                               <ToggleGroup fx:id="Sesso2" />
                            </toggleGroup>
                         </RadioButton>
-                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonMostraDati" prefHeight="42.0" prefWidth="179.0" text="Mostra dati dipendente" />
+                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonMostraDati" prefHeight="42.0" prefWidth="179.0" text="SALVA" />
                         <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" />
                      </children>
                   </AnchorPane>
@@ -76,7 +77,28 @@
             </Tab>
           <Tab text="FORNITORI">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="23.0" layoutY="39.0" prefHeight="25.0" prefWidth="177.0" text="AGGIUNGI FORNITORE">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="33.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i relativi dati">
+                           <font>
+                              <Font name="System Italic" size="8.0" />
+                           </font>
+                        </Label>
+                        <CheckBox fx:id="ChkTypeFornitori" layoutX="23.0" layoutY="81.0" mnemonicParsing="false" prefHeight="16.0" prefWidth="98.0" text="Persona fisica">
+                           <font>
+                              <Font name="System Italic" size="11.0" />
+                           </font>
+                        </CheckBox>
+                        <TextField fx:id="txtNomeFornitore" layoutX="23.0" layoutY="107.0" />
+                        <TextField fx:id="txtCognomeFornitore" layoutX="23.0" layoutY="143.0" />
+                        <TextField fx:id="txtNomeAziendaFornitore" layoutX="23.0" layoutY="179.0" />
+                        <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaFornitore" prefHeight="42.0" prefWidth="179.0" text="Aggiungi fornitore" />
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="CONTO">
@@ -86,6 +108,9 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Label layoutY="-2.0" prefHeight="33.0" prefWidth="109.0" text="NOME AZIENDA" />
+      <Label layoutX="3.0" layoutY="1.0" prefHeight="33.0" prefWidth="109.0" text="EDILGHEDI S.N.C">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Label>
    </children>
 </Pane>
