--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -98,6 +98,19 @@
                         <TextField fx:id="txtCognomeFornitore" disable="true" layoutX="23.0" layoutY="143.0" />
                         <TextField fx:id="txtNomeAziendaFornitore" layoutX="23.0" layoutY="179.0" />
                         <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaFornitore" prefHeight="42.0" prefWidth="179.0" text="Aggiungi fornitore" />
+                        <Label layoutX="413.0" layoutY="39.0" prefHeight="25.0" prefWidth="109.0" text="PAGAMENTO ">
+                           <font>
+                              <Font name="System Bold" size="16.0" />
+                           </font>
+                        </Label>
+                        <SearchableComboBox layoutX="380.0" layoutY="81.0" />
+                        <Label layoutX="392.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i  relativi dati">
+                           <font>
+                              <Font name="System Italic" size="8.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txtFornitorePagamento" layoutX="393.0" layoutY="117.0" />
+                        <Button layoutX="378.0" layoutY="153.0" mnemonicParsing="false" onAction="#onButtonPaga" prefHeight="42.0" prefWidth="179.0" text="Invia Pagamento" />
                      </children></AnchorPane>
             </content>
           </Tab>
