--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -50,21 +50,18 @@
                               <Font name="System Italic" size="8.0" />
                            </font>
                         </Label>
-                        <TextField layoutX="382.0" layoutY="114.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="382.0" layoutY="149.0" prefHeight="25.0" prefWidth="173.0" />
-                        <TextField layoutX="382.0" layoutY="183.0" prefHeight="25.0" prefWidth="173.0" />
-                        <RadioButton layoutX="382.0" layoutY="218.0" mnemonicParsing="false" text="M">
+                        <TextField fx:id="txtModificaNome" layoutX="382.0" layoutY="114.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField fx:id="txtModificaCognome" layoutX="382.0" layoutY="149.0" prefHeight="25.0" prefWidth="173.0" />
+                        <TextField fx:id="txtModificaData" layoutX="382.0" layoutY="183.0" prefHeight="25.0" prefWidth="173.0" />
+                        <RadioButton fx:id="rbModificaMaschio" layoutX="485.0" layoutY="218.0" mnemonicParsing="false" text="M">
                            <toggleGroup>
-                              <ToggleGroup fx:id="Sesso1" />
+                              <ToggleGroup fx:id="ModificaSesso" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton layoutX="426.0" layoutY="218.0" mnemonicParsing="false" text="F">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="Sesso2" />
-                           </toggleGroup>
-                        </RadioButton>
-                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonMostraDati" prefHeight="42.0" prefWidth="179.0" text="Mostra dati dipendente" />
-                        <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" />
+                        <RadioButton fx:id="rbModificaFemmina" layoutX="528.0" layoutY="218.0" mnemonicParsing="false" text="F" toggleGroup="$ModificaSesso" />
+                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonModificaDipendente" prefHeight="42.0" prefWidth="179.0" text="Modifica Dati" />
+                        <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" onAction="#onListaDipendentiAction" />
+                        <Label fx:id="sessoDipendente" layoutX="382.0" layoutY="218.0" prefHeight="17.0" prefWidth="62.0" text="-" />
                      </children>
                   </AnchorPane>
             </content>
