--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -106,7 +106,7 @@
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <SearchableComboBox layoutX="380.0" layoutY="81.0" />
+                        <SearchableComboBox fx:id="ListaFornitori" layoutX="380.0" layoutY="81.0" />
                         <Label layoutX="392.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i  relativi dati">
                            <font>
                               <Font name="System Italic" size="8.0" />
