--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -65,9 +65,10 @@
                         </RadioButton>
 
                         <RadioButton fx:id="rbModificaFemmina" layoutX="528.0" layoutY="218.0" mnemonicParsing="false" text="F" toggleGroup="$ModificaSesso" />
-                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonModificaDipendente" prefHeight="42.0" prefWidth="179.0" text="Modifica Dati" />
+                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonModificaDipendente" prefHeight="42.0" prefWidth="180.0" text="Modifica Dati" />
                         <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" onAction="#onListaDipendentiAction" />
                         <Label fx:id="sessoDipendente" layoutX="382.0" layoutY="218.0" prefHeight="17.0" prefWidth="62.0" text="-" />
+                        <Button layoutX="379.0" layoutY="297.0" mnemonicParsing="false" onAction="#onButtonRimuoviDipendente" prefHeight="42.0" prefWidth="180.0" text="Rimuovi Dipendente" />
 
                      </children>
                   </AnchorPane>
