--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -143,7 +143,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="33.0" prefWidth="163.0" text="Tot.">
+                        <Label fx:id="lbltotaleConto" layoutX="434.0" layoutY="392.0" prefHeight="33.0" prefWidth="163.0" text="Tot.">
                            <font>
                               <Font name="System Bold" size="21.0" />
                            </font>
