--- a/src/main/resources/org/example/gestionale/gestionale-view.fxml
+++ b/src/main/resources/org/example/gestionale/gestionale-view.fxml
@@ -26,7 +26,7 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="440.0" prefWidth="591.0">
                      <children>
-                        <Button layoutX="27.0" layoutY="213.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi dipendente" />
+                        <Button layoutX="27.0" layoutY="213.0" mnemonicParsing="false" onAction="#onButtonCreaDipendente" prefHeight="42.0" prefWidth="179.0" style="-fx-background-radius: 120px;" text="Aggiungi dipendente" />
                         <TextField fx:id="txtNome" layoutX="26.0" layoutY="82.0" prefHeight="25.0" prefWidth="173.0" />
                         <TextField fx:id="txtCognome" layoutX="26.0" layoutY="117.0" prefHeight="25.0" prefWidth="173.0" />
                         <DatePicker fx:id="DatePicker" layoutX="27.0" layoutY="152.0" />
@@ -69,10 +69,10 @@
                         </RadioButton>
 
                         <RadioButton fx:id="rbModificaFemmina" layoutX="528.0" layoutY="218.0" mnemonicParsing="false" text="F" toggleGroup="$ModificaSesso" />
-                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonModificaDipendente" prefHeight="42.0" prefWidth="180.0" text="Modifica Dati" />
+                        <Button layoutX="379.0" layoutY="244.0" mnemonicParsing="false" onAction="#onButtonModificaDipendente" prefHeight="42.0" prefWidth="180.0" style="-fx-background-radius: 120px;" text="Modifica Dati" />
                         <SearchableComboBox fx:id="ListaDipendenti" layoutX="381.0" layoutY="79.0" onAction="#onListaDipendentiAction" />
                         <Label fx:id="sessoDipendente" layoutX="382.0" layoutY="218.0" prefHeight="17.0" prefWidth="62.0" text="-" />
-                        <Button layoutX="379.0" layoutY="297.0" mnemonicParsing="false" onAction="#onButtonRimuoviDipendente" prefHeight="42.0" prefWidth="180.0" text="Rimuovi Dipendente" />
+                        <Button layoutX="379.0" layoutY="297.0" mnemonicParsing="false" onAction="#onButtonRimuoviDipendente" prefHeight="42.0" prefWidth="180.0" style="-fx-background-radius: 120px;" text="Rimuovi Dipendente" />
 
                      </children>
                   </AnchorPane>
@@ -100,7 +100,7 @@
                         <TextField fx:id="txtNomeCliente" disable="true" layoutX="23.0" layoutY="107.0" />
                         <TextField fx:id="txtCognomeCliente" disable="true" layoutX="23.0" layoutY="143.0" />
                         <TextField fx:id="txtNomeAziendaCliente" layoutX="23.0" layoutY="179.0" />
-                        <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaCliente" prefHeight="42.0" prefWidth="179.0" text="Aggiungi cliente" />
+                        <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaCliente" prefHeight="42.0" prefWidth="179.0" style="-fx-background-radius: 120px;" text="Aggiungi cliente" />
                         <Label layoutX="413.0" layoutY="39.0" prefHeight="25.0" prefWidth="80.0" text="FATTURA">
                            <font>
                               <Font name="System Bold" size="16.0" />
@@ -108,7 +108,7 @@
                         </Label>
                         <SearchableComboBox fx:id="ListaClienti" layoutX="367.0" layoutY="81.0" onAction="#onListaClientiPaga" />
                         <TextField fx:id="txtFatturaClienti" layoutX="379.0" layoutY="117.0" />
-                        <Button layoutX="365.0" layoutY="153.0" mnemonicParsing="false" onAction="#onButtonFattura" prefHeight="42.0" prefWidth="179.0" text="Invia Fattura" />
+                        <Button layoutX="365.0" layoutY="153.0" mnemonicParsing="false" onAction="#onButtonFattura" prefHeight="42.0" prefWidth="179.0" style="-fx-background-radius: 120px;" text="Invia Fattura" />
                         <Label layoutX="378.0" layoutY="58.0" prefHeight="17.0" prefWidth="151.0" text="Completa tutte le caselle con i relativi dati">
                            <font>
                               <Font name="System Italic" size="8.0" />
@@ -139,7 +139,7 @@
                         <TextField fx:id="txtNomeFornitore" disable="true" layoutX="23.0" layoutY="107.0" />
                         <TextField fx:id="txtCognomeFornitore" disable="true" layoutX="23.0" layoutY="143.0" />
                         <TextField fx:id="txtNomeAziendaFornitore" layoutX="23.0" layoutY="179.0" />
-                        <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaFornitore" prefHeight="42.0" prefWidth="179.0" text="Aggiungi fornitore" />
+                        <Button layoutX="23.0" layoutY="215.0" mnemonicParsing="false" onAction="#onButtonCreaFornitore" prefHeight="42.0" prefWidth="179.0" style="-fx-background-radius: 120px;" text="Aggiungi fornitore" />
                         <Label layoutX="413.0" layoutY="39.0" prefHeight="25.0" prefWidth="109.0" text="PAGAMENTO ">
                            <font>
                               <Font name="System Bold" size="16.0" />
@@ -152,7 +152,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="txtFornitorePagamento" layoutX="393.0" layoutY="117.0" />
-                        <Button layoutX="378.0" layoutY="153.0" mnemonicParsing="false" onAction="#onButtonPaga" prefHeight="42.0" prefWidth="179.0" text="Invia Pagamento" />
+                        <Button layoutX="378.0" layoutY="153.0" mnemonicParsing="false" onAction="#onButtonPaga" prefHeight="42.0" prefWidth="179.0" style="-fx-background-radius: 120px;" text="Invia Pagamento" />
                      </children></AnchorPane>
             </content>
           </Tab>
